WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145779
Missing content in UIWebView snapshots sometimes
https://bugs.webkit.org/show_bug.cgi?id=145779
Summary
Missing content in UIWebView snapshots sometimes
Simon Fraser (smfr)
Reported
2015-06-08 17:31:55 PDT
Missing content in UIWebView snapshots sometimes
Attachments
Patch
(4.16 KB, patch)
2015-06-08 17:34 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-06-08 17:34:36 PDT
Created
attachment 254528
[details]
Patch
Darin Adler
Comment 2
2015-06-08 17:44:14 PDT
Comment on
attachment 254528
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254528&action=review
> Source/WebCore/platform/ios/LegacyTileLayer.mm:35 > +using namespace WebCore;
If we are going to add this, then are we going to remove all the other WebCore prefixes in this file? Maybe we should just use WebCore::FloatRect in the one place it matters.
> Source/WebCore/platform/ios/LegacyTileLayer.mm:62 > + _tileGrid->tileCache().setOverrideVisibleRect(Optional<FloatRect>(dirtyRect));
I think just FloatRect(dirtyRect) would be better here.
> Source/WebCore/platform/ios/LegacyTileLayer.mm:67 > + _tileGrid->tileCache().setOverrideVisibleRect(Optional<FloatRect>());
Nullopt is the normal way to write this.
Simon Fraser (smfr)
Comment 3
2015-06-11 10:29:15 PDT
<
rdar://problem/20744708
>
Simon Fraser (smfr)
Comment 4
2015-06-11 11:03:02 PDT
https://trac.webkit.org/r185461
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug