Missing content in UIWebView snapshots sometimes https://bugs.webkit.org/show_bug.cgi?id=145779 rdar://problem/20744708

Reviewed by Darin Adler.

When expanding collapsed parts of quoted text on iOS, sometimes the "concertina"
images would be blank. This happened because we'd fail to create tiles for regions
outside the LegacyTileCache's visibleRect.

Fix by giving LegacyTileCache an optional override visibleRect, which is set
and cleared during -renderInContext: using the context clip rect.

* platform/ios/LegacyTileCache.h:
* platform/ios/LegacyTileCache.mm:
(WebCore::LegacyTileCache::visibleRectInLayer):
(WebCore::LegacyTileCache::setOverrideVisibleRect):
* platform/ios/LegacyTileLayer.mm:
(-[LegacyTileHostLayer renderInContext:]):

Canonical link: https://commits.webkit.org/163930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185461 268f45cc-cd09-0410-ab3c-d52691b4dbfc